 <menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home" />
        <item
            android:id="@+id/onTv"
            android:title="@string/on_tv" />
        <item
            android:id="@+id/topRated"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/popular"
            android:title="@string/popular" />
        <item
            android:id="@+id/upcoming"
            android:title="@string/upcoming" />

                <item
                    android:id="@+id/nowPlaying"
                    android:title="@string/now_playing" />
                <item
                    android:id="@+id/favourites"
                    android:title="@string/favourites" />
                <item
                    android:id="@+id/profile"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/logout"
                    android:title="@string/logout" />

    </group>
</menu>
